@@ -1808,6 +1808,7 @@ CREATE TABLE cc_epayment_log (
     PRIMARY KEY (id)
 )ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE utf8_bin;
 
+
 CREATE TABLE cc_system_log (
     id 								INT NOT NULL AUTO_INCREMENT,
     iduser 							INT DEFAULT 0 NOT NULL,
@@ -1818,7 +1819,6 @@ CREATE TABLE cc_system_log (
 	tablename						VARCHAR(255),
 	pagename			 			VARCHAR(255),
 	ipaddress						VARCHAR(255),	
-	creationdate  					TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
+	creationdate  					TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
     PRIMARY KEY (id)
 )ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE utf8_bin;
-
